# FinSight

./: .gitignore  FinSight_AI_Hackathon.pptx  FinSight_AI_Master_Prompt_Blueprint.docx  PROJECT_SUMMARY.md  README.md  check_orig.py  create_valid_pdf.py  docker-compose.infra.yml  docker-compose.yml  document.md  e2e_test.py  e2e_test2.py  e2e_test3.py  start-local.ps1  test_all.py  test_api.py  test_backend.py  test_db_conn.py  test_docling.py  test_docling_no_ocr.py  test_e2e_final.py  test_pdf.py  test_proxy.py  test_pymupdf.py  test_scale.py  test_upload.py  test_upload2.py
backend/: .env.example  Dockerfile  alembic.ini  backend_log.txt  backend_log_new.txt  celery_log_new.txt  implementation_plan_part1.md  pyproject.toml  task.md  test_docling.py  test_full_pipeline.py  test_pipeline.py  walkthrough.md
backend/alembic/: env.py
backend/alembic/versions/: 096293904cdd_add_user_and_context_auth.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: auth.py  chat.py  evaluate.py  files.py  health.py  projects.py  voice.py
backend/app/core/: citation_engine.py  glean_verifier.py  llm_client.py  logging.py  member1_mocks.py  member4_mocks.py  memory_manager.py  prompt_cache.py  reasoning_engine.py  refusal_gate.py  slm_compressor.py  streaming.py  voice_handler.py
backend/app/ingestion/: __init__.py  chunker.py  docling_parser.py  dual_indexer.py  enricher.py  metadata_extractor.py  pipeline.py
backend/app/middleware/: auth.py
backend/app/models/: database.py  orm.py  schemas.py
backend/app/retrieval/: __init__.py  analytics_exporter.py  bm25_index.py  bm25_searcher.py  bootstrap_eval.py  cross_document.py  dashboard_data.py  debug_builder.py  dynamic_threshold.py  hnsw_tuner.py  (+12 more)
backend/data/: eval_dataset.json  retrieval_report.md
backend/scratch/: test_chat_phase3.py  test_evaluation_t4.py  test_member3.py
backend/tests/: test_all_phases.py  test_api.py
backend/workers/: celery_app.py
conversationalai/: .gitignore  SETUP_AND_TESTING.md  ai.md  pyproject.toml
conversationalai/app/: main.py
rag/: .env.example  ADVERSARIAL_REPORT.md  ARCHITECTURE.md  CAPACITY_PLANNING.md  CHANGELOG.md  DEMO_SCRIPT.md  HNSW_TUNING.md  Nikhil_Hierarchical_Retrieval_Implementation_Log.md  Nikhil_Phase_1_Implementation_Log.md  Nikhil_Phase_2_Implementation_Log.md  Nikhil_Phase_3_Implementation_Log.md  Nikhil_Phase_4_Implementation_Log.md  PERFORMANCE.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  requirements.txt
rag/backend/: config.py  embedding_client.py
rag/scripts/: smoke_dense_search.py
rag/tests/: test_retrieval_pipeline.py
(+151 files in other folders)
