[project]
name = "finsight-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "httptools>=0.6.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    # --- Data & Validation ---
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # --- Task Queue ---
    "celery>=5.4.0",
    "redis>=5.2.0",
    # --- Vector DB ---
    "qdrant-client>=1.12.0",
    # --- LLM APIs ---
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    # --- Auth ---
    "python-jose[cryptography]>=3.3.0",
    # --- NLP & ML ---
    "langdetect>=1.0.9",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.4.0",
    "spacy>=3.8.0",
    # --- Document Processing (Member 2) ---
    "docling>=2.0.0",
    # --- RAG Framework (Member 1) ---
    "llama-index>=0.12.0",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
]
