[project]
name = "finsight-conversationalai"
version = "0.1.0"
description = "FinSight AI — Member 4: Conversational AI module"
requires-python = ">=3.11"

[tool.uv.dependencies]
langchain = ">=0.2"
langchain-groq = ">=0.1"
llama-index = ">=0.10"
llama-index-core = ">=0.10"
spacy = ">=3.7"
psycopg2-binary = ">=2.9"
qdrant-client = ">=1.9"
fastapi = ">=0.110"
uvicorn = {extras = ["standard"], version = ">=0.29"}
python-dotenv = ">=1.0"
asyncpg = ">=0.29"
pytest = ">=8.0"
pytest-asyncio = ">=0.23"

[tool.pytest.ini_options]
asyncio_mode = "strict"
